[project]
name = "hn-daily-index"
version = "0.1.0"
description = "Daily archive of the top 10 Hacker News stories, organized by date"
readme = "src/README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
]

[project.scripts]
hn-daily-index = "hn_daily_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_daily_index"]
